@@ -71,6 +71,7 @@ export(match_df)
 export(mdply)
 export(mlply)
 export(mutate)
+export(name_rows)
 export(numcolwise)
 export(progress_none)
 export(progress_text)
